--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.5",
     "react-scripts": "^5.0.1",
+    "react-share": "^4.4.1",
     "unsplash-js": "^7.0.15",
     "web-vitals": "^0.2.4"
   },
